# zeitschatz

./: .env.local.sample  .env.prod  .env.prod.sample  .env.sample  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  SECURITY.md  TODO.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_photo_expires_at.py  0003_add_tan_pool.py  0004_add_tan_reward.py  0005_device_changes.py  0006_learning_tables.py  0007_achievements.py  0008_task_templates.py  0009_multi_family.py  0010_login_code.py  0011_last_login.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  achievements.py  admin.py  auth.py  families.py  health.py  learning.py  ledger.py  notifications.py  photos.py  stats.py  submissions.py  tan_pool.py  tasks.py  users.py  (+1 more)
backend/app/core/: config.py  dependencies.py  login_code.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/jobs/: retention.py
backend/app/models/: __init__.py  achievement.py  child_profile.py  device.py  device_provider.py  family.py  learning.py  ledger.py  submission.py  tan_pool.py  task.py  user.py
backend/app/schemas/: auth.py  common.py  family.py  learning.py  ledger.py  submission.py  tan_pool.py  task.py  user.py
backend/app/services/: achievements.py  email.py  notifications.py  photos.py  question_bank.py
backend/scripts/: generate_login_codes.py  seed_family.py  seed_users.py  smoke_test.sh
(+69 files in other folders)
