[project]
name = "zeitschatz-backend"
version = "0.1.0"
description = "FastAPI Backend fuer ZeitSchatz (Familien-TAN-App)"
authors = [{ name = "ZeitSchatz Team" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose>=3.3.0",
    "apscheduler>=3.10.4",
    "aiofiles>=23.2.1",
    "pillow>=10.2.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx==0.27.0",
    "anyio>=4.2.0",
    "ruff>=0.3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.editable]
packages = ["app"]
